# climate-tracker

./: .gitignore  CMakeLists.txt  README.md
res/: CMakeLists.txt  climate-tracker.ui  resources.gresource.xml
src/: CMakeLists.txt  main.c
